--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.16.0",
     "firebase": "^5.11.1",
     "http-errors": "~1.6.2",
+    "json2xls": "^0.1.2",
     "morgan": "~1.9.0"
   },
   "description": "This example is web boards focusing on data input / output for easy understanding of firebase (database).",
